# classifai-python

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml  test.yml
classifai/: __init__.py  client.py  exceptions.py
examples/: basic_usage.py  image_classification.py  real_world_usecases.py
tests/: __init__.py  test_client.py
